
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct strbuf {int len; int buf; } ;
struct signature_check {char result; } ;
struct commit {int dummy; } ;


 struct strbuf STRBUF_INIT ;
 int check_signature (int ,int ,int ,int ,struct signature_check*) ;
 scalar_t__ parse_signed_commit (struct commit const*,struct strbuf*,struct strbuf*) ;
 int strbuf_release (struct strbuf*) ;

int check_commit_signature(const struct commit *commit, struct signature_check *sigc)
{
 struct strbuf payload = STRBUF_INIT;
 struct strbuf signature = STRBUF_INIT;
 int ret = 1;

 sigc->result = 'N';

 if (parse_signed_commit(commit, &payload, &signature) <= 0)
  goto out;
 ret = check_signature(payload.buf, payload.len, signature.buf,
  signature.len, sigc);

 out:
 strbuf_release(&payload);
 strbuf_release(&signature);

 return ret;
}
