; ModuleID = '/home/carl/AnghaBench/git/extr_commit.c_check_commit_signature.c'
source_filename = "/home/carl/AnghaBench/git/extr_commit.c_check_commit_signature.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32, i32 }
%struct.commit = type { i32 }
%struct.signature_check = type { i8 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @check_commit_signature(%struct.commit* %0, %struct.signature_check* %1) #0 {
  %3 = alloca %struct.commit*, align 8
  %4 = alloca %struct.signature_check*, align 8
  %5 = alloca %struct.strbuf, align 4
  %6 = alloca %struct.strbuf, align 4
  %7 = alloca i32, align 4
  store %struct.commit* %0, %struct.commit** %3, align 8
  store %struct.signature_check* %1, %struct.signature_check** %4, align 8
  %8 = bitcast %struct.strbuf* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %8, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  %9 = bitcast %struct.strbuf* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %9, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  store i32 1, i32* %7, align 4
  %10 = load %struct.signature_check*, %struct.signature_check** %4, align 8
  %11 = getelementptr inbounds %struct.signature_check, %struct.signature_check* %10, i32 0, i32 0
  store i8 78, i8* %11, align 1
  %12 = load %struct.commit*, %struct.commit** %3, align 8
  %13 = call i64 @parse_signed_commit(%struct.commit* %12, %struct.strbuf* %5, %struct.strbuf* %6)
  %14 = icmp sle i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %2
  br label %27

16:                                               ; preds = %2
  %17 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %5, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %5, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %6, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %6, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.signature_check*, %struct.signature_check** %4, align 8
  %26 = call i32 @check_signature(i32 %18, i32 %20, i32 %22, i32 %24, %struct.signature_check* %25)
  store i32 %26, i32* %7, align 4
  br label %27

27:                                               ; preds = %16, %15
  %28 = call i32 @strbuf_release(%struct.strbuf* %5)
  %29 = call i32 @strbuf_release(%struct.strbuf* %6)
  %30 = load i32, i32* %7, align 4
  ret i32 %30
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @parse_signed_commit(%struct.commit*, %struct.strbuf*, %struct.strbuf*) #2

declare dso_local i32 @check_signature(i32, i32, i32, i32, %struct.signature_check*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
